# gapprox

./: .gitignore  README.md  __init__.py  approximate.py  approximators_list.txt  approximators_specification.txt  documentation.txt  err_min_alg_iter.py  error.py  expression.py  iter_err_min_alg.py  launcher.py  linear_approximation.py  linear_d_approx.py  main.py  main_cli.py  main_screen.py  notes.txt  outlier.py  pyproject.toml  readme.md  regression.py  stepper.py  test.py  test_build.sh  test_pypi_build.sh  test_testpypi_build.sh  todo.txt
.old/: .data.py  .main.py  api_2.py  api_3.py  api_4.py  converter.py  iter_err_min_alg.py  utils.py
approximators/: approx_dct_1.py  approx_dct_2.py  approx_dct_3.py  approx_dct_4.py  approximator_dct.py  approximator_dst.py  approximator_fft.py  approximators_list.txt  linear_Regression.py  taylor_series.py
cli/: cli.py  functions.py
converters/: line_to_array.py
core/: .main_functions.py  approximators.py  engine.py  error.py  outlier.py  parameterizer.py  pyproject.toml  stepper.py  utils.py
core/src/gapprox/core/: __init__.py  __main__.py  ai.py
core/src/gapprox/core/paramgens/interpolators/: linear.py  polynomial.py
documentation/: architecture.md  daa_rant.txt  disciplines.md  documentation.txt  documentation_2.txt  err_min_alg_iter.py  manual.md  notes.txt  specifications.txt  versioning.txt  vision.md
documentation/diagrams/: api.drawio  converter.drawio  engine.drawio  iterative optimizer.drawio  optimizer.drawio  standalone application launcher.drawio
documentation/personal rants/: backpropagation.txt  bayesian optimization.txt  dag.txt  features.txt  generalizations.txt  hypergraph.txt  i did it!.txt  interpolator vs approximator.txt  log error vs SMAPE.txt  manual.txt  multithreading.txt  mutations.txt  naming.txt  new features and improvements.txt  optimization2.txt  parsing.txt  pypi.txt  rant2.txt  rant3.txt  relations.txt  roadmap density.txt  roadmap graph.txt  symbol.txt  symbols.txt  symbols2.txt  theoretical.txt  todo.txt
documentation/roadmap/: objectives.txt  roadmap DAG.txt  roadmap MIMO.txt  roadmap equations.txt  roadmap graph.txt  roadmap objective analysis.txt  roadmap vectors.txt  roadmap.txt  roadmap2.txt
documentation/specifications/: api specifications.md  api.md  dag.txt  general specifications.txt  general.txt  input specifications.py  input.py  pipeline specifications.txt  string specifications.txt
err_min_alg_iter/: approx_dct.py  err_min_alg_iter.py  error.py  notes.txt  notes2.txt  stepper.py
error_minimization_algorithm/: error.py  notes.txt
examples/: bad_input_examples.py  big_func.py  example1.py
gapprox/: __init__.py
gapprox-core/: __init__.py
gapprox-core/engine/: check_input.py  engine.py
gapprox-dag/: dag.py  specifications.txt
gapprox-dag/functions/: operators.py
gapprox-types/: number_operations.py  number_types.py  truth_types.py
gapprox/api/: api.py
graphapproximator/: .ai.py.swp  __init__.py  __main__.py  api.py  approximators.py  engine.py  graphplotter.html  interpolators.py  parser.py  parsers.py  plotters.py  sampler.py  utils.py
graphapproximator/analyzers/: __init__.py  line.py  polynomial_regression.py
graphapproximator/api/: api.py  check_input.py  utils.py
graphapproximator/components/: .interpolators.py.swp  .test.py  anomaly_metrics.py  approximators.py  extrapolators.py  interpolators.py  iterative_optimizer.py  parameterizers.py  plotters.py  predictors.py
graphapproximator/converter/: __init__.py
graphapproximator/expressions/: cosine_series.py  fourier_series.py  polyline.py  polynomial_regression.py  taylor_series.py
graphapproximator/functions/: boolean.py  convolution.py  hybrid.py
hana/: __init__.py  __main__.py
hana/api/: api.py  (+1 more)
metapackage/: pyproject.toml
old/: api_2.py  check_input.py  dag4.py  dag_old.py  decorators.py  edge.py  error.py  function.py  int_to_str.py  op_on_tensor.py  relation.py  test.py  variable.py
random related stuff/: optimization.py  optimization2.py  optimization3.py  optimization4.py
root/: pyproject.toml
root/src/gapprox/: __init__.py
tests/: dag.py  number_types.py  test_dag.py  test_expression.py  test_function.py  test_graph.py  test_parameter_optimizer.py  test_relations.py  test_relations2.py  test_stringify_visitor.py  thing.prof
types/: bool rant.txt  hybrid operations.py  misc.py  note.txt  number_operations.py  number_sets.py  number_types.py  truth_types.py
(+165 files in other folders)
