[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphapproximator"
version = "0.1.0"
description = "approximate the graph of a function"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
#package-dir = {"" = "."}

authors = [
	{ name="deftasparagusanaconda", email="deftasparagusanaconda@gmail.com" },
	{ name="Jeffrin Santon", email="jeffrinsanton0909@gmail.com"}
]

dependencies = [
	# put any actual dependencies here, or leave empty
]

[project.urls]
"Homepage" = "https://github.com/deftasparagusanaconda/graphapproximator"
"Bug Tracker" = "https://github.com/deftasparagusanaconda/graphapproximator/issues"
[tool.setuptools]
packages = ["graphapproximator"]
