[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "hana"
#version = "dynamic"
dynamic = ["version"]
description = "toolkit to find the approximate function of a graph"
readme = "README.md"
requires-python = ">=3.13.2"
license = "GPL-3.0-or-later"
#package-dir = {"" = "."}
dependencies = ["numpy", "matplotlib"]
authors = [
	{ name="deftasparagusanaconda", email="deftasparagusanaconda@gmail.com" },
	{ name="Jeffrin Santon", email="jeffrinsanton0909@gmail.com"}
]
keywords = ["graph", "model", "curve", "line", "parabola", "expression", "approximation", "symbolic", "regression", "regress", "optimization", "optimize", "iterative", "plot"]
classifiers = ["Programming Language :: Python :: 3.13"]

[project.scripts]
hana = "hana.__main__:main"

[project.optional-dependencies]
fft = ["scipy"]

[project.urls]
Homepage = "https://github.com/deftasparagusanaconda/hana"
Issues = "https://github.com/deftasparagusanaconda/hana/issues"
Documentation = "https://github.com/deftasparagusanaconda/hana/documentation"
Repository = "https://github.com/deftasparagusanaconda/hana"

[tool.setuptools.packages.find]
where = ["."]
include = ["hana*"]

[tool.setuptools.dynamic]
version = {attr = "hana.__version__"}
