[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "gapprox_core"
version = "0.3.0"
#dynamic = ["version"]
description = "calculate a single approximation for the graph of a function"
readme = "README.md"
requires-python = ">=3.13.3"
license = "GPL-3.0-or-later"
authors = [
	{ name="deftasparagusanaconda", email="deftasparagusanaconda@gmail.com" },
	{ name="Jeffrin Santon", email="jeffrinsanton0909@gmail.com"}
]
keywords = ["graph", "model", "curve", "line", "parabola", "expression", "approximation", "symbolic", "regression", "regress", "optimization", "optimize", "iterative", "plot"]
classifiers = ["Programming Language :: Python :: 3.13"]

#[project.scripts]
#gapprox = "gapprox.__main__:main"

[project.optional-dependencies]
fft = ["scipy"]

[project.urls]
Homepage = "https://github.com/deftasparagusanaconda/gapprox"
Issues = "https://github.com/deftasparagusanaconda/gapprox/issues"
Documentation = "https://github.com/deftasparagusanaconda/gapprox/documentation"
Repository = "https://github.com/deftasparagusanaconda/gapprox"

#[tool.setuptools.packages.find]
#where = ["."]
#include = ["gapprox_core"]

#[tool.setuptools.dynamic]
#version = {attr = "gapprox_core.__version__"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gapprox.core"]
