[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "gapprox-root"
version = "0.1.0"
description = "allows you to do `import gapprox` in the python interpreter"
requires-python = ">=3.13.2"
license = "GPL-3.0-or-later"
#dependencies = ["gapprox-core", "gapprox-dag", "gapprox-regressor" "gapprox-types"]
authors = [
	{ name="deftasparagusanaconda", email="deftasparagusanaconda@gmail.com" }
]
classifiers = ["Programming Language :: Python :: 3.13"]

[project.urls]
Homepage = "https://github.com/deftasparagusanaconda/gapprox"
Issues = "https://github.com/deftasparagusanaconda/gapprox/issues"
Documentation = "https://github.com/deftasparagusanaconda/gapprox/documentation"
Repository = "https://github.com/deftasparagusanaconda/gapprox"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
